fix(components): button color to gray
